Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- #522914 by jjemmett, user date_real_url() on week links.
- #704068 by gibus, add option to color calendar items by group.
- #360364 by marcushenningsen, don't link to day if there is no day view.
- #382852 by llslim, make sure replacements patterns work even if field is excluded.
- #660880 by kaare, fix method of including js in jacalendar module.
- #760316 by skwashd, arithmetric clean up ical rfc compliance.
- #613528 Fix Views option handling to set options correctly and avoid Attempt to modify property of non-object error.

Version 6.2.2
=============
- #429446 Col element must not be in thead.
- #506944 Localize more link in jcalendar popup.
- #529826 Add check_plain().
- #489722 Remove mistake that caused year calendar to process endlessly.
- #389294 Require the date field in calendar style, needed to identify what cell the date belongs in.
- #452690 Avoid errors when some date fields are empty (usually when there are multiple date fields in view.)
- #389294 Avoid errors when date argument or filter is not available as a date field.
- #454958 Calendar patch was broken in ical.
- #444526 Fix typo in variable name for calendar translation.
- #427996 More link logic was reversed.
- #389294 Avoid errors when date argument or filter is not available as date field.

Version 6.2.1
=============
- #385886 Add handling for non-node date fields.
- #360967 Add method for deleting a custom default calendar.

Version 6.2.0
=============
- #377760 Fix alias handling for node edit and delete links.
- Fix the way the node type filter was configured in the default view.
- Get rid of truncated field display options, Views now handles that.
- #372625 Reset year granularity after processing months on year view now that Views has changed processing order, also omit deprecated themes, we now use date_nav_title. 