@@ -33,10 +33,10 @@
 <div class="calendar-calendar"><div class="day-view">
 <table>
   <col width="<?php print $first_column_width?>"></col>
+  <?php foreach ($columns as $column): ?>
+  <col width="<?php print $column_width; ?>%"></col>
+  <?php endforeach; ?>
   <thead>
-    <?php foreach ($columns as $column): ?>
-    <col width="<?php print $column_width; ?>%"></col>
-    <?php endforeach; ?>
     <tr>
       <th class="calendar-dayview-hour"><?php print $by_hour_count > 0 ? t('Time') : ''; ?></th>
       <?php foreach ($columns as $column): ?>
